--- a/Tmath.tex
+++ b/Tmath.tex
@@ -1,89 +1,82 @@
+```math
+
 \section{Mathematics behind Transformer}
 
+Transformer Model Details
 
-Certainly! Below is the mathematical explanation of the Transformer model and the softmax function, along with the requested LaTeX formatting:
+Here are some additional details on how the proportional limit enables relating discrete covariance updates to the continuous neural SDE,
+\begin{itemize}
+\item In a proportional limit, the number of layers $\(L\)$ and width $\(n\)$ satisfy $\(L/n \rightarrow d/w\)$ for some constant ratio $\(d/w\)$ as $\(n \rightarrow \infty\)$.
+\item This constant ratio allows defining a continuous time $\(t = l/n \in [0, T]\)$ where $\(T = d/w\)$ and $\(l\)$ is the layer index.
+\item As \(n \rightarrow \infty\), there are infinitesimally small gaps $\(1/n\)$ between discrete layers $\(l\)$ and $\(l+1\)$ in this pseudo-continuous time.
+\item The attention operation gives covariance updates of size $\(O(1/n)\)$.
+\item This means the discrete covariance updates $\(V_{l+1} - V_l\)$ are small $(\(O(1/n)\))$ for large $\(n\)$.
+\item These small updates can be embedded into the continuous time \(t \in [0, T]\) as \(n \rightarrow \infty\).
+\item The evolution of $\(V_l\)$ in discrete layers can be approximated by discretizing the SDE $\(dV_t\)$ using step size $\(1/n\)$.
+\item This gives updates like $\(V_{l+1} \approx V_l + \text{(SDE drift and diffusion terms)}\)$ that converge to the continuous SDE.
+\item So the constant $\(d/w\)$ ratio provides a continuous notion of time to embed discrete steps into.
+\item The $\(O(1/n)\)$ update size allows approximating the SDE via these discrete updates.
+\end{itemize}
 
-### Transformer Model Details
-
-Here are some additional details on how the proportional limit enables relating discrete covariance updates to the continuous neural SDE:
-
-1. In a proportional limit, the number of layers \(L\) and width \(n\) satisfy \(L/n \rightarrow d/w\) for some constant ratio \(d/w\) as \(n \rightarrow \infty\).
-
-2. This constant ratio allows defining a continuous "time" \(t = l/n \in [0, T]\) where \(T = d/w\) and \(l\) is the layer index.
-
-3. As \(n \rightarrow \infty\), there are infinitesimally small gaps \(1/n\) between discrete layers \(l\) and \(l+1\) in this pseudo-continuous time.
-
-4. The attention operation gives covariance updates of size \(O(1/n)\).
-
-5. This means the discrete covariance updates \(V_{l+1} - V_l\) are small (\(O(1/n)\)) for large \(n\).
-
-6. These small updates can be embedded into the continuous time \(t \in [0, T]\) as \(n \rightarrow \infty\).
-
-7. The evolution of \(V_l\) in discrete layers can be approximated by discretizing the SDE \(dV_t\) using step size \(1/n\).
-
-8. This gives updates like \(V_{l+1} \approx V_l + \text{(SDE drift and diffusion terms)}\) that converge to the continuous SDE.
-
-9. So the constant \(d/w\) ratio provides a continuous notion of time to embed discrete steps into.
-
-10. The \(O(1/n)\) update size allows approximating the SDE via these discrete updates.
 
 Together this connects the discrete covariance evolution to the solution of the continuous SDE.
 
-In summary, the key is that the temperature scaling leads to \(O(1/n)\) terms in the Taylor expansion of the centered softmax attention matrix \(A\). This provides the small update sizes needed to relate the discrete updates to the continuous SDE.
+In summary, the key is that the temperature scaling leads to $\(O(1/n)\)$ terms in the Taylor expansion of the centered softmax attention matrix \(A\). This provides the small update sizes needed to relate the discrete updates to the continuous SDE.
 
 ### Mathematical Steps for Taylor Expansion of Softmax
 
-The following is the mathematical derivation for the Taylor expansion approximation for the centered softmax attention matrix \(A\):
+The following is the mathematical derivation for the Taylor expansion approximation for the centered softmax attention matrix $\(A\)$:
 
-We start with the definition of \(A\):
-
+We start with the definition of $\(A\)$:
+$$
 \[ A = I + \text{Softmax}(\tau^{-1}Y) - \frac{1}{m}11^\top \]
-
-Where \(\text{Softmax}(Z)_{ij} = \frac{\exp(Z_{ij})}{\sum_k \exp(Z_{ik})}\).
+$$
+Where $\(\text{Softmax}(Z)_{ij} = \frac{\exp(Z_{ij})}{\sum_k \exp(Z_{ik})}\)$.
 
 The softmax function is used in machine learning to convert a vector of arbitrary values to a probability distribution. It is defined as follows:
 
-For a vector \(z\) of length \(n\), the softmax of its \(i\)-th component is defined as:
-
+For a vector $\(z\)$ of length $\(n\)$, the softmax of its $\(i\)$-th component is defined as:
+$$
 \[ \text{softmax}(z_i) = \frac{\exp(z_i)}{\sum_{j=1}^{n} \exp(z_j)} \]
+$$
+The partial derivative of the softmax function with respect to its inputs can be a bit tricky because of the summation in the denominator. The derivative will be different depending on whether we're taking the derivative with respect to the same input that we're applying the softmax to $(\(i=j\))$ or a different input $(\(i \neq j\))$.
 
-The partial derivative of the softmax function with respect to its inputs can be a bit tricky because of the summation in the denominator. The derivative will be different depending on whether we're taking the derivative with respect to the same input that we're applying the softmax to (\(i=j\)) or a different input (\(i \neq j\)).
-
-1. **Case \(i = j\):**
-
+1. **Case $\(i = j\)$:**
+$$
 \[ \frac{\partial \text{softmax}(z_i)}{\partial z_i} = \text{softmax}(z_i) \cdot (1 - \text{softmax}(z_i)) \]
-
-2. **Case \(i \neq j\):**
-
+$$
+2. **Case $\(i \neq j\)$:**
+$$
 \[ \frac{\partial \text{softmax}(z_i)}{\partial z_j} = - \text{softmax}(z_i) \cdot \text{softmax}(z_j) \]
-
+$$
 So, the derivative of the softmax function with respect to its inputs can be compactly represented as follows:
-
+$$
 \[ \frac{\partial \text{softmax}(z_i)}{\partial z_j} = \text{softmax}(z_i) \cdot (\delta_{ij} - \text{softmax}(z_j)) \]
+$$
+where $\(\delta_{ij}\)$ is the Kronecker delta, which is 1 when $\(i=j\)$ and 0 when $\(i \neq j\)$.
 
-where \(\delta_{ij}\) is the Kronecker delta, which is 1 when \(i=j\) and 0 when \(i \neq j\).
-
-The second derivative, \(\frac{\partial^2 \text{softmax}(z)}{\partial z \partial z}\), can be derived similarly.
+The second derivative, $\(\frac{\partial^2 \text{softmax}(z)}{\partial z \partial z}\)$, can be derived similarly.
 
 In matrix form:
-
+$$
 \[ \frac{\partial^2 \text{softmax}(z)}{\partial z \partial z} = \text{diag}(\text{softmax}(z)) - \text{softmax}(z) \cdot \text{softmax}(z)^\top \]
-
+$$
 To get the second derivative, we take the derivative of the above:
-
+$$
 \[ \frac{\partial^2 \text{softmax}(z)}{\partial z^2} = \text{diag}(\text{diag}(\text{softmax}(z)) - \text{softmax}(z) \cdot \text{softmax}(z)^\top) - (\text{diag}(\text{softmax}(z)) - \text{softmax}(z) \cdot \text{softmax}(z)^\top) \cdot \text{softmax}(z)^\top - \text{softmax}(z) \cdot \left(\text{diag}(\text{softmax}(z)) - \text{softmax}(z) \cdot \text{softmax}(z)^\top\right)^\top \]
-
-Evaluating at \(z=0\), where:
-
+$$
+Evaluating at $\(z=0\)$, where:
+$$
 \[
 \begin{align*}
 \text{diag}(\text{softmax}(0)) &= \frac{1}{m}I \\
 \text{softmax}(0) &= \frac{1}{m}11^\top
 \end{align*}
 \]
+$$
 
 The first term:
-
+$$
 \[ \text{diag}(\text{diag}(\text{softmax}(0)) - \text{softmax}(0) \cdot \text{softmax}(0)^\top) = \text{diag}\left(\frac{1}{m}I - \frac{1}{m^2}11^\top\right) \]
-
-I hope this helps! If you have further questions, please, let me know.
+$$
+```
